--- a/HughieLinkGame/res/layout/layout_hughie_game_lose.xml
+++ b/HughieLinkGame/res/layout/layout_hughie_game_lose.xml
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- created by hughiezhang 20151110 18:21 -->
+<!-- created by hughiezhang 20160119 14:47 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:gravity="center"
-	android:orientation="vertical">
-    <!-- 显示you win的图片 -->
+    android:layout_width="fill_parent" 
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
+    android:gravity="center">
+    <!-- 显示game over的图片 -->
     <ImageView 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="@dimen/dp_10"
         android:contentDescription="@string/text"
         android:scaleType="centerCrop"
-        android:src="@drawable/imgv_game_main_win_label"
+        android:src="@drawable/imgv_game_main_lose_label"
         />
-    <!-- 显示游戏赢局的动画 -->
+    <!-- 显示游戏败局的动画 -->
     <ImageView 
-        android:id="@+id/game_win_anim_imgv"
-        android:layout_width="wrap_content"
+        android:id="@+id/game_lose_anim_imgv"
+        android:layout_width="wrap_content" 
         android:layout_height="wrap_content"
-        android:background="@drawable/imgv_game_main_win_anim1"
+        android:background="@drawable/imgv_game_main_lose_anim1"
         />
-    <!-- 显示游戏赢局几颗星的布局 -->
+    <!-- 显示游戏败局星级的布局 -->
     <LinearLayout 
-        android:layout_width="match_parent"
+         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/dp_10"
         android:layout_gravity="center"
@@ -31,7 +31,6 @@
         android:orientation="horizontal">
         <!-- 第一颗星 -->
         <ImageView 
-            android:id="@+id/game_win_star1_imgv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/text"
@@ -40,7 +39,6 @@
             />
         <!-- 第二颗星 -->
         <ImageView 
-            android:id="@+id/game_win_star2_imgv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/text"
@@ -49,7 +47,6 @@
             />
         <!-- 第三颗星 -->
         <ImageView 
-            android:id="@+id/game_win_star3_imgv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/text"
@@ -57,7 +54,7 @@
             android:src="@drawable/imgv_game_main_star_unchecked"
             />
     </LinearLayout>
-    <!-- 游戏赢局操作按钮组布局 -->
+    <!-- 游戏败局操作按钮组布局 -->
     <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -67,20 +64,19 @@
         android:orientation="horizontal">
         <!-- 重新开始按钮 -->
         <Button 
-            android:id="@+id/game_win_replay_btn"
+            android:id="@+id/game_lose_replay_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/dp_15"
             android:background="@drawable/hughie_btn_game_main_replay_selector"
             />
-        <!-- 下一关按钮 -->
+        <!-- 餐单按钮 -->
         <Button 
-            android:id="@+id/game_win_next_btn"
+            android:id="@+id/game_lose_menu_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_15"
-            android:background="@drawable/hughie_btn_game_win_next_selector"
+            android:background="@drawable/hughie_btn_game_main_menu_selector"
             />
     </LinearLayout>
 </LinearLayout>
-	
