--- a/HughieLinkGame/res/values/attrs.xml
+++ b/HughieLinkGame/res/values/attrs.xml
@@ -20,8 +20,14 @@
     <!-- 自定义的tabs -->
     <declare-styleable name="PagerSlidingTabStrip">
         <attr name="indicatorColor" format="color" />
+        <attr name="selectTextColor" format="color" />
         <attr name="indicatorHeight" format="dimension" />
         <attr name="underlineHeight" format="dimension" />
+        <attr name="tabPaddingLeftRight" format="dimension" />
+        <attr name="scrollOffset" format="dimension" />
+        <attr name="tabBackground" format="reference" />
+        <attr name="shouldExpand" format="boolean" />
+        <attr name="textAllCaps" format="boolean" />
         <attr name="indicatorResource" format="reference" />
     </declare-styleable>
 </resources>
